--- a/src/views/wrap.pug
+++ b/src/views/wrap.pug
@@ -6,41 +6,41 @@ section#wrap
         The <code>.wrap</code> allows you to wrap all children
         within container if the elements use more than 100%;
 
-    .example.layout.row.wrap
-      .flex-30: .box .flex-30
-      .flex-45: .box .flex-45
-      .flex-25: .box .flex-25
-      .flex-25: .box .flex-25
-      .flex-66: .box .flex-66
-      .flex-80: .box .flex-80
+    .example.layout.row.wrap.spacing-1
+      .flex-3: .box .flex-3
+      .flex-4: .box .flex-4
+      .flex-3: .box .flex-3
+      .flex-3: .box .flex-3
+      .flex-5: .box .flex-5
+      .flex-8: .box .flex-8
       .flex-10: .box .flex-10
-      .flex-45: .box .flex-45
+      .flex-4: .box .flex-4
 
     .code.row
       pre(contenteditable="true").
-        &lt;div class="example layout.row wrap"&gt;
-          &lt;div class="flex-30"&gt;
-            &lt;div class="box"&gt;.flex-30&lt;/div&gt;
+        &lt;div class="example layout row wrap"&gt;
+          &lt;div class="flex-3"&gt;
+            &lt;div class="box"&gt;.flex-3&lt;/div&gt;
           &lt;/div&gt;
-          &lt;div class="flex-45"&gt;
-            &lt;div class="box"&gt;.flex-45&lt;/div&gt;
+          &lt;div class="flex-4"&gt;
+            &lt;div class="box"&gt;.flex-4&lt;/div&gt;
           &lt;/div&gt;
-          &lt;div class="flex-25"&gt;
-            &lt;div class="box"&gt;.flex-25&lt;/div&gt;
+          &lt;div class="flex-3"&gt;
+            &lt;div class="box"&gt;.flex-3&lt;/div&gt;
           &lt;/div&gt;
-          &lt;div class="flex-25"&gt;
-            &lt;div class="box"&gt;.flex-25&lt;/div&gt;
+          &lt;div class="flex-3"&gt;
+            &lt;div class="box"&gt;.flex-3&lt;/div&gt;
           &lt;/div&gt;
-          &lt;div class="flex-66"&gt;
-            &lt;div class="box"&gt;.flex-66&lt;/div&gt;
+          &lt;div class="flex-5"&gt;
+            &lt;div class="box"&gt;.flex-5&lt;/div&gt;
           &lt;/div&gt;
-          &lt;div class="flex-80"&gt;
-            &lt;div class="box"&gt;.flex-80&lt;/div&gt;
+          &lt;div class="flex-8"&gt;
+            &lt;div class="box"&gt;.flex-8&lt;/div&gt;
           &lt;/div&gt;
           &lt;div class="flex-10"&gt;
             &lt;div class="box"&gt;.flex-10&lt;/div&gt;
           &lt;/div&gt;
-          &lt;div class="flex-45"&gt;
-            &lt;div class="box"&gt;.flex-45&lt;/div&gt;
+          &lt;div class="flex-4"&gt;
+            &lt;div class="box"&gt;.flex-4&lt;/div&gt;
           &lt;/div&gt;
         &lt;/div&gt;
