--- a/src/sass/imports/_alignment.scss
+++ b/src/sass/imports/_alignment.scss
@@ -8,28 +8,44 @@ $justify-content: (
    stretch: stretch,
    space-around: space-around,
    space-between: space-between,
+   space-evenly: space-evenly,
 );
 
-$align-items: (
+$justify-items: (
    baseline: baseline,
-   center: center,
-   end: flex-end,
-   start: flex-start,
    stretch: stretch,
+   start: flex-start,
+   end: flex-end,
+   center: center,
 );
 
 $align-content: (
    baseline: baseline,
-   center: center,
-   end: flex-end,
-   start: flex-start,
    stretch: stretch,
+   start: flex-start,
+   end: flex-end,
+   center: center,
    space-around: space-around,
    space-between: space-between,
+   space-evenly: space-evenly,
+);
+
+$align-items: (
+   baseline: baseline,
+   stretch: stretch,
+   start: flex-start,
+   end: flex-end,
+   center: center,
 );
 
 @each $nameJust, $valueJust in $justify-content {
    .justify-content-#{$nameJust} {
+      justify-content: $valueJust;
+   }
+}
+
+@each $nameJust, $valueJust in $justify-items {
+   .justify-items-#{$nameJust} {
       justify-content: $valueJust;
    }
 }
