--- a/src/sass/imports/_layout.scss
+++ b/src/sass/imports/_layout.scss
@@ -1,10 +1,6 @@
 @import '_sizes';
 
-.layout,
-.layout-column,
-.layout-row,
-.layout-row-reverse,
-.layout-column-reverse {
+.layout {
    box-sizing: border-box;
    display: flex;
 }
@@ -24,33 +20,31 @@
 
 // Display none layouts, put before all to avoid override
 @each $name, $value in $sizes {
-   .layout-#{$name},
-   .layout-#{$name}-column,
-   .layout-#{$name}-row,
-   .layout-#{$name}-row-reverse,
-   .layout-#{$name}-column-reverse {
+   .column-#{$name},
+   .row-#{$name},
+   .row-reverse-#{$name},
+   .column-reverse-#{$name} {
       display: none;
    }
 }
 
 @each $name, $value in $sizes {
    @media #{$value} {
-      .layout-#{$name},
-      .layout-#{$name}-column,
-      .layout-#{$name}-row {
+      .column-#{$name},
+      .row-#{$name} {
          box-sizing: border-box;
          display: flex;
       }
-      .layout-#{$name}-column {
+      .column-#{$name} {
          flex-direction: column;
       }
-      .layout-#{$name}-row {
+      .row-#{$name} {
          flex-direction: row;
       }
-      .layout-#{$name}-column-reverse {
+      .column-reverse-#{$name} {
          flex-direction: column-reverse;
       }
-      .layout-#{$name}-row-reverse {
+      .row-reverse-#{$name} {
          flex-direction: row-reverse;
       }
    }
@@ -61,12 +55,4 @@
    width: 100%;
    min-height: 100%;
    height: 100%;
-}
-
-.wrap {
-   flex-wrap: wrap;
-}
-
-.nowrap {
-   flex-wrap: nowrap;
 }
