--- a/src/sass/imports/_padding.scss
+++ b/src/sass/imports/_padding.scss
@@ -1,10 +1,15 @@
 @import '_variables';
 
-// Direction padding
 @each $ndirection, $value in $direction {
+   // Direction padding
    @each $nspacing, $vspacing in $spacing {
       .p#{$ndirection}-#{$nspacing} {
          padding#{$value}: $vspacing;
+      }
+
+      // Padding for child elements of a layout
+      .layout.spacing-#{$nspacing} > * {
+         padding: $vspacing;
       }
    }
 }
