--- a/src/sass/imports/_alignment.scss
+++ b/src/sass/imports/_alignment.scss
@@ -38,6 +38,14 @@ $align-items: (
    center: center,
 );
 
+$align-self: (
+   baseline: baseline,
+   stretch: stretch,
+   start: flex-start,
+   end: flex-end,
+   center: center,
+);
+
 @each $nameJust, $valueJust in $justify-content {
    .justify-content-#{$nameJust} {
       justify-content: $valueJust;
@@ -59,6 +67,12 @@ $align-items: (
 @each $nameJust, $valueJust in $align-content {
    .align-content-#{$nameJust} {
       align-content: $valueJust;
+   }
+}
+
+@each $nameJust, $valueJust in $align-self {
+   .align-self-#{$nameJust} {
+      align-self: $valueJust;
    }
 }
 
